--- a/index.html
+++ b/index.html
@@ -50,15 +50,27 @@ for Your Business</h1>
 <section>
     <h2>Our Team</h2>
     <ul>
-        <li><img src="" alt=""></li>
-        <li><img src="" alt=""></li>
-        <li><img src="" alt=""></li>
-        <li><img src="" alt=""></li>
+        <li><img src="img/1.jpg" alt="Mark Guerrero"> 
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+        </li>
+        <li><img src="img/2.jpg" alt="Tom Ford">
+        <h3>Tom Ford</h3>
+        <p>Frontend Developer</p>
+        </li>
+        <li><img src="img/3.jpg" alt="Camila Garcia">
+        <h3>Camila Garcia</h3>
+        <p>Marketing</p></li>
+        <li><img src="img/4.jpg" alt="Daniel Wilson">
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+        </li>
     </ul>
 </section>
 </main> 
  <footer>
-    
+    <a href="./index.html">Webstudio</a>
+    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
  </footer> 
 </body>
 </html>
