--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <nav>
         <ul>
           <li><a href="./index.html">Studio</a></li>
-          <li><a href=""></a>Portfolio</li>
-          <li><a href=""></a>Contacts</li>
+          <li><a href="./portfolio.html"></a>Portfolio</li>
+          <li><a href="./contacts.html"></a>Contacts</li>
         </ul>
       </nav>
       <address>
@@ -64,22 +64,22 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="img/1.jpg" alt="Mark Guerrero" />
+            <img src="images/1.jpg" alt="Mark Guerrero" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="img/2.jpg" alt="Tom Ford" />
+            <img src="images/2.jpg" alt="Tom Ford" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="img/3.jpg" alt="Camila Garcia" />
+            <img src="images/3.jpg" alt="Camila Garcia" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="img/4.jpg" alt="Daniel Wilson" />
+            <img src="images/4.jpg" alt="Daniel Wilson" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
