--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/2.jpg" alt="Tom Ford" />
+            <img src="images/2.jpg" alt="Tom Ford" width="260" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/3.jpg" alt="Camila Garcia" />
+            <img src="images/3.jpg" alt="Camila Garcia" width="260" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/4.jpg" alt="Daniel Wilson" />
+            <img src="images/4.jpg" alt="Daniel Wilson" width="260" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
