--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <nav>
         <ul>
           <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html"></a>Portfolio</li>
-          <li><a href="./contacts.html"></a>Contacts</li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -28,6 +28,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2>Our freatures</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -64,22 +65,22 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="images/1.jpg" alt="Mark Guerrero" />
+            <img src="./images/1.jpg" alt="Mark Guerrero" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/2.jpg" alt="Tom Ford" width="260" />
+            <img src="./images/2.jpg" alt="Tom Ford"  />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/3.jpg" alt="Camila Garcia" width="260" />
+            <img src="./images/3.jpg" alt="Camila Garcia"  />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/4.jpg" alt="Daniel Wilson" width="260" />
+            <img src="./images/4.jpg" alt="Daniel Wilson" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
