--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>goit-markup-hw-02</title>
   </head>
   <body>
     <header>
@@ -18,7 +18,7 @@
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:++110001111111">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -28,7 +28,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <h2>Our freatures</h2>
+        <h2>Our features</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
